--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Unfold &mdash; A onepage portfolio HTML template by Unslate.co</title>
+    <title>E|M &mdash;</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -666,7 +666,7 @@
           <div class="row justify-content-center">
             <div class="col-md-7">
               
-              <div class="footer-site-logo"><a href="#">Unfold<span>.</span></a></div>
+              <div class="footer-site-logo"><a href="#">E|M<span>.</span></a></div>
 
               <ul class="footer-site-social">
                 <li><a href="#">Facebook</a></li>
