--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
               </ul>
 
               <p class="site-copyright">
-                <small>&copy; 2020 <a href="#">Unfold  </a>. All Rights Reserved. Design with <span class="icon-heart text-danger"></span> by <a href="#">Unslate.co</a>.</small>
+                <small>&copy; 2020 <a href="#">E|M  </a>. All Rights Reserved. Design with <span class="icon-heart text-danger"></span> by <a href="#">E|M</a>.</small>
               </p>
 
             </div>
