--- a/portfolio-single-1.html
+++ b/portfolio-single-1.html
@@ -102,7 +102,7 @@
       </nav>
       <!-- END nav -->
 
-      <div class="cover-v1 jarallax" style="" id="home-section">
+      <div class="cover-v1 jarallax"  id="home-section">
         <div class="container">
           <div class="row align-items-center">
 
@@ -129,13 +129,13 @@
         <div class="portfolio-single-wrap unslate_co--section" id="portfolio-single-section">
 
           <div class="portfolio-single-inner">
-            <h2 class="heading-portfolio-single-h2">Shoe Rebranding</h2>
+            <h2 class="heading-portfolio-single-h2">EXNESS</h2>
 
             <div class="row justify-content-between mb-5">
               <div class="col-12 mb-4">
                 <div class="owl-carousel single-slider">
                   <figure class="mb-4">
-                    <img src="images/work_1_full.jpg" alt="Image" class="img-fluid">
+                    <img src="images/exness.jpeg" alt="Image" class="img-fluid">
                   </figure>
                   <figure class="mb-4">
                     <img src="images/work_1_a_full.jpg" alt="Image" class="img-fluid">
