--- a/index.html
+++ b/index.html
@@ -239,13 +239,13 @@
                   >
                     <div class="overlay">
                       <span class="wrap-icon icon-link2"></span>
-                      <div class="portfolio-item-content">
-                        <h3>Modern Building</h3>
-                        <p>branding, packaging</p>
+                      <div class="portfolio-item-content" style="background-color: rgb(202, 196, 196);padding:10px">
+                        <h3>FOREX</h3>
+                        <p style="color:black">FOREX IN REAL WORLD</p>
                       </div>
                     </div>
                     <img
-                      src="images/work_3_md.jpg"
+                      src="images/forex.jpeg"
                       class="lazyload img-fluid"
                       alt="Images"
                     />
@@ -264,12 +264,12 @@
                     <div class="overlay">
                       <span class="wrap-icon icon-photo2"></span>
                       <div class="portfolio-item-content">
-                        <h3>Watch</h3>
-                        <p>web, packaging</p>
+                        <h3>EXNESS T-SHIRT</h3>
+                        <p>CLOTHES</p>
                       </div>
                     </div>
                     <img
-                      src="images/work_4_full.jpg"
+                      src="images/t.jpeg"
                       class="lazyload img-fluid"
                       alt="Images"
                     />
