--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               <div class="col-md-7 mx-auto text-center">
                 <h1 class="heading gsap-reveal-hero text-white">E|M CAPITAL</h1>
                 <h2 class="subheading gsap-reveal-hero text-white">
-                  Inovação e Ética no Mercado Forex
+                  Investing in a better future
                 </h2>
               </div>
             </div>
@@ -276,7 +276,7 @@
                   </a>
                 </div>
 
-                <div
+                <!-- <div
                   class="item illustration packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2"
                 >
                   <a
@@ -393,7 +393,8 @@
                       alt="Images"
                     />
                   </a>
-                </div>
+                </div> -->
+
               </div>
             </div>
           </div>
@@ -428,7 +429,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div>inov
 
         <div class="unslate_co--section" id="about-section">
           <div class="container">
