--- a/portfolio-single-1.html
+++ b/portfolio-single-1.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-  <title>Unfold &mdash; A onepage portfolio HTML template by Unslate.co</title>
+  <title>E|M</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
-  <meta name="description" content="A onepage portfolio HTML template by Unslate.co">
+  <meta name="description" content="edilson moreira">
   <meta name="keywords" content="html, css, javascript, jquery">
-  <meta name="author" content="Unslate.co">
+  <meta name="jardel" content="jardellion">
 
   <link rel="stylesheet" href="css/vendor/icomoon/style.css">
   <link rel="stylesheet" href="css/vendor/owl.carousel.min.css">
@@ -57,23 +57,7 @@
               <ul class="site-nav-ul js-clone-nav text-left d-none d-lg-inline-block">
                 <li class="has-children">
                   <a href="index.html#home-section" class="nav-link">Home</a>
-                  <ul class="dropdown">
-                    <li>
-                      <a href="index.html">Hero Image BG</a>
-                    </li>
-                    <li>
-                      <a href="index-video.html">Video BG</a>
-                    </li>
-                    <li>
-                      <a href="index-hero-slider.html">Hero Slider</a>
-                    </li>
-                    <li>
-                      <a href="index-sidebar-menu.html">Sidebar Menu</a>
-                    </li>
-                    <li>
-                      <a href="index-right-menu.html">Right Menu</a>
-                    </li>
-                  </ul>
+                  
                 </li>
                 <li><a href="index.html#portfolio-section" class="nav-link">Portfolio</a></li>
                 <li><a href="index.html#about-section" class="nav-link">About</a></li>
