--- a/portfolio-single-5.html
+++ b/portfolio-single-5.html
@@ -12,10 +12,10 @@
 
     <meta
       name="description"
-      content="A onepage portfolio HTML template by Unslate.co"
+      content="edilson moreira"
     />
     <meta name="keywords" content="html, css, javascript, jquery" />
-    <meta name="author" content="Unslate.co" />
+    <meta name="jardel" content="jardellion" />
 
     <link rel="stylesheet" href="css/vendor/icomoon/style.css" />
     <link rel="stylesheet" href="css/vendor/owl.carousel.min.css" />
@@ -61,7 +61,7 @@
                   class="site-nav-ul js-clone-nav text-left d-none d-lg-inline-block"
                 >
                   <li class="has-children">
-                    <a href="index.html#home-section" class="nav-link">Home</a>
+                    <a href="/" class="nav-link">Home</a>
                    
                   </li>
                   <li>
@@ -119,11 +119,11 @@
         </nav>
         <!-- END nav -->
 
-        <div class="cover-v1 jarallax"  id="home-section">
+        <div class="cover-v1 jarallax" id="home-section">
           <div class="container">
             <div class="row align-items-center">
               <div class="col-md-10 mx-auto text-center">
-                <h1 class="heading" data-aos="fade-up">Trading</h1>
+                <h1 class="heading" data-aos="fade-up">Reworking</h1>
                 <h2 class="subheading" data-aos="fade-up" data-aos-delay="100">
                   Far far away, behind the word mountains, far from the
                   countries.
@@ -151,26 +151,53 @@
             id="portfolio-single-section"
           >
             <div class="portfolio-single-inner">
-              <h2 class="heading-portfolio-single-h2">Modern Building</h2>
+              <h2 class="heading-portfolio-single-h2">EXNESS EvENTOS</h2>
 
               <div class="row justify-content-between align-items-stretch">
                 <div class="col-lg-8">
                   <p>
-                    <a href="images/trading.jpeg" data-fancybox="gal"
+                    <a href="images/lubango.jpeg" data-fancybox="gal"
                       ><img
-                        src="images/trading.jpeg"
+                        src="images/lubango.jpeg"
                         alt="Image"
                         class="img-fluid"
                     /></a>
                   </p>
                   <p>
-                    <a href="images/trading.jpeg" data-fancybox="gal"
+                    <a href="images/huambo.jpeg" data-fancybox="gal"
                       ><img
-                        src="images/trading.jpeg"
+                        src="images/huambo.jpeg"
                         alt="Image"
                         class="img-fluid"
                     /></a>
                   </p>
+                  <p>
+                    <a href="images/luanda.jpeg" data-fancybox="gal"
+                      ><img
+                        src="images/luanda.jpeg"
+                        alt="Image"
+                        class="img-fluid"
+                    /></a>
+                  </p>
+                  <p>
+                    <a href="images/africa do sul.jpeg" data-fancybox="gal"
+                      ><img
+                        src="images/africa do sul.jpeg"
+                        alt="Image"
+                        class="img-fluid"
+                    /></a>
+                  </p>
+
+                  <p>
+                    <a href="images/dubai.jpeg" data-fancybox="gal"
+                      ><img
+                        src="images/dubai.jpeg"
+                        alt="Image"
+                        class="img-fluid"
+                    /></a>
+                  </p>
+
+
                 </div>
                 <div class="col-lg-4 pl-lg-5">
                   <div class="unslate_co--sticky">
@@ -231,7 +258,7 @@
           <div class="row justify-content-center">
             <div class="col-md-7">
               <div class="footer-site-logo">
-                <a href="#">E|M<span>.</span></a>
+                <a href="#">Unfold<span>.</span></a>
               </div>
 
               <ul class="footer-site-social">
