--- a/portfolio-single-2.html
+++ b/portfolio-single-2.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-  <title>Unfold &mdash; A onepage portfolio HTML template by Unslate.co</title>
+  <title>E|M</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <meta name="description" content="A onepage portfolio HTML template by Unslate.co">
+  <meta name="description" content="edilson moreira">
   <meta name="keywords" content="html, css, javascript, jquery">
-  <meta name="author" content="Unslate.co">
+  <meta name="jardel" content="jardellion">
 
   <link rel="stylesheet" href="css/vendor/icomoon/style.css">
   <link rel="stylesheet" href="css/vendor/owl.carousel.min.css">
@@ -56,7 +56,7 @@
             <div class="col-md-5 text-right">
               <ul class="site-nav-ul js-clone-nav text-left d-none d-lg-inline-block">
                 <li class="has-children">
-                  <a href="index.html#home-section" class="nav-link">Home</a>
+                  <a href="/" class="nav-link">Home</a>
                   <ul class="dropdown">
                     <li>
                       <a href="index.html">Hero Image BG</a>
@@ -86,7 +86,7 @@
             <div class="col-md-5 text-right text-lg-left">
               <ul class="site-nav-ul js-clone-nav text-left d-none d-lg-inline-block">
                 <li><a href="index.html#skills-section" class="nav-link">Skills</a></li>
-                <li><a href="index.html#testimonial-section" class="nav-link">Testimonial</a></li>
+               
                 <li><a href="index.html#journal-section" class="nav-link">Journal</a></li>
                 <li><a href="index.html#contact-section" class="nav-link">Contact</a></li>
               </ul>
