--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
 
     <!-- Theme Style -->
     <link rel="stylesheet" href="css/style.css" />
+    <style>
+      .special-link {
+        font-weight: bold;
+        font-size: 1.3rem;
+        color: #000;
+      }
+
+      .special-link:hover {
+        color: #c8b645 !important;
+      }
+    </style>
   </head>
   <body data-spy="scroll" data-target=".site-nav-target" data-offset="200">
     <nav class="unslate_co--site-mobile-menu">
@@ -527,15 +538,15 @@
                 <div class="feature-v1" data-aos="fade-up" data-aos-delay="0">
                   <div class="wrap-icon mb-3">
                     <img
-                      src="images/svg/001-options.svg"
-                      alt="Image"
+                      src="./images/svg/discord.svg"
+                      alt="discord icon svg"
                       width="45"
                     />
                   </div>
-                  <h3>
-                    Sinais de <br />
-                    Forex
-                  </h3>
+                  <a href="https://whop.com/emc/" role="link" aria-label="link" class="special-link">
+                    E|M CAPITAL Discord<br />
+                    Membership
+                  </a>
                   <p>
                     A small river named Duden flows by their place and supplies
                     it with the necessary regelialia.
@@ -545,12 +556,12 @@
               <div class="col-md-6 col-lg-4 mb-4">
                 <div class="feature-v1" data-aos="fade-up" data-aos-delay="100">
                   <div class="wrap-icon mb-3">
-                    <img src="images/svg/002-chat.svg" alt="Icon" width="45" />
+                    <img src="images/svg/letra-b.png" alt="Icon" width="45" />
                   </div>
-                  <h3>
-                    Curso <br />
-                    Forex
-                  </h3>
+                  <a href="https://whop.com/emc/?pass=prod_r3HkMfRjvwDo0" role="link" aria-label="link" class="special-link">
+                    XAUKING <br />
+                    BILLIONAIRE SIGNALS
+                  </a>
                   <p>
                     A small river named Duden flows by their place and supplies
                     it with the necessary regelialia.
@@ -561,13 +572,13 @@
                 <div class="feature-v1" data-aos="fade-up" data-aos-delay="200">
                   <div class="wrap-icon mb-3">
                     <img
-                      src="images/svg/003-contact-book.svg"
+                      src="images/svg/analise-de-mercado.png"
                       alt="Image"
                       class="img-fluid"
                       width="45"
                     />
                   </div>
-                  <h3>Etherum <br /></h3>
+                  <a href="https://whop.com/emc/?pass=prod_04PrSMyVdBXSY" class="special-link">Curso de Iniciante <br />Para Forex</a>
                   <p>
                     A small river named Duden flows by their place and supplies
                     it with the necessary regelialia.
@@ -579,15 +590,15 @@
                 <div class="feature-v1" data-aos="fade-up" data-aos-delay="0">
                   <div class="wrap-icon mb-3">
                     <img
-                      src="images/svg/004-percentage.svg"
+                      src="images/svg/analise-de-mercado2.png"
                       alt="Image"
                       width="45"
                     />
                   </div>
-                  <h3>
-                    Web <br />
-                    Development
-                  </h3>
+                  <a href="https://whop.com/emc/?pass=prod_1v8w8j0GatWYn" class="special-link">
+                    Curso Avançado <br />
+                    Para Forex
+                  </a>
                   <p>
                     A small river named Duden flows by their place and supplies
                     it with the necessary regelialia.
@@ -597,12 +608,12 @@
               <div class="col-md-6 col-lg-4 mb-4">
                 <div class="feature-v1" data-aos="fade-up" data-aos-delay="100">
                   <div class="wrap-icon mb-3">
-                    <img src="images/svg/006-goal.svg" alt="Image" width="45" />
+                    <img src="images/svg/genese.png" alt="Image" width="45" />
                   </div>
-                  <h3>
-                    WordPress <br />
-                    Solutions
-                  </h3>
+                  <a href="https://whop.com/emc/?pass=prod_Huf4ZqWj7vlGO" class="special-link">
+                    Forex Genesis <br />
+                    Course
+                  </a>
                   <p>
                     A small river named Duden flows by their place and supplies
                     it with the necessary regelialia.
@@ -613,21 +624,52 @@
                 <div class="feature-v1" data-aos="fade-up" data-aos-delay="200">
                   <div class="wrap-icon mb-3">
                     <img
-                      src="images/svg/005-line-chart.svg"
+                      src="images/svg/rede.png"
                       alt="Image"
                       width="45"
                     />
                   </div>
-                  <h3>
-                    Mobile <br />
-                    Applications
-                  </h3>
+                  <a href="https://whop.com/emc/?pass=prod_U0MzcfMbO4VGW" class="special-link">
+                    How to beat  <br />
+                    The Matrix
+                  </a>
                   <p>
                     A small river named Duden flows by their place and supplies
                     it with the necessary regelialia.
                   </p>
                 </div>
+
+
+
               </div>
+
+
+
+              <div class="col-md-6 col-lg-4 mb-4">
+                <div class="feature-v1" data-aos="fade-up" data-aos-delay="200">
+                  <div class="wrap-icon mb-3">
+                    <img
+                      src="images/svg/robo-industrial.png"
+                      alt="Image"
+                      width="45"
+                    />
+                  </div>
+                  <a href="https://whop.com/emc/?pass=prod_NrLPXkrijV6LR" class="special-link">
+                    Forex Robots &  <br />
+                    Indicators
+                  </a>
+                  <p>
+                    A small river named Duden flows by their place and supplies
+                    it with the necessary regelialia.
+                  </p>
+                </div>
+
+
+
+              </div>
+
+
+
             </div>
           </div>
         </div>
