--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
           <div class="container">
             <div class="section-heading-wrap text-center mb-5">
               <h2 class="heading-h2 text-center divider">
-                <span class="gsap-reveal">My Skills</span>
+                <span class="gsap-reveal">Why Should You Choose Us?</span>
               </h2>
               <span class="gsap-reveal"
                 ><img src="images/divider.png" alt="divider" width="76"
@@ -698,7 +698,7 @@
                     >
                     <span class="append-text">%</span>
                   </span>
-                  <span class="counter-label">WordPress</span>
+                  <span class="counter-label">Accuracy</span>
                 </div>
               </div>
               <div
@@ -713,7 +713,7 @@
                     >
                     <span class="append-text">%</span>
                   </span>
-                  <span class="counter-label">HTML/CSS</span>
+                  <span class="counter-label">Efficiency</span>
                 </div>
               </div>
               <div
@@ -728,7 +728,7 @@
                     >
                     <span class="append-text">%</span>
                   </span>
-                  <span class="counter-label">jQuery</span>
+                  <span class="counter-label">Reliability</span>
                 </div>
               </div>
               <div
@@ -743,7 +743,7 @@
                     >
                     <span class="append-text">%</span>
                   </span>
-                  <span class="counter-label">Design</span>
+                  <span class="counter-label">Profitability</span>
                 </div>
               </div>
             </div>
@@ -756,7 +756,7 @@
           <div class="container">
             <div class="section-heading-wrap text-center mb-5">
               <h2 class="heading-h2 text-center divider">
-                <span class="gsap-reveal">My Journal</span>
+                <span class="gsap-reveal">Gallery</span>
               </h2>
               <span class="gsap-reveal"
                 ><img src="images/divider.png" alt="divider" width="76"
@@ -782,7 +782,7 @@
                       </p>
                     </div>
                   </div>
-                  <img src="images/post_1.jpg" class="lazyload" alt="Image" />
+                  <img src="images/gallary/1.jpeg" class="lazyload" alt="Image" />
                 </a>
               </div>
               <div
@@ -803,7 +803,7 @@
                       </p>
                     </div>
                   </div>
-                  <img src="images/post_2.jpg" class="lazyload" alt="Image" />
+                  <img src="images/gallary/2.jpeg" class="lazyload" alt="Image" />
                 </a>
               </div>
 
@@ -825,7 +825,7 @@
                       </p>
                     </div>
                   </div>
-                  <img src="images/post_3.jpg" class="lazyload" alt="Image" />
+                  <img src="images/gallary/3.jpeg" class="lazyload" alt="Image" />
                 </a>
               </div>
               <div
@@ -846,7 +846,7 @@
                       </p>
                     </div>
                   </div>
-                  <img src="images/post_4.jpg" class="lazyload" alt="Image" />
+                  <img src="images/gallary/4.jpeg" class="lazyload" alt="Image" />
                 </a>
               </div>
 
@@ -868,7 +868,7 @@
                       </p>
                     </div>
                   </div>
-                  <img src="images/post_5.jpg" class="lazyload" alt="Image" />
+                  <img src="images/gallary/5.jpeg" class="lazyload" alt="Image" />
                 </a>
               </div>
             </div>
