--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
                       width="45"
                     />
                   </div>
-                  <a href="https://whop.com/emc/?pass=prod_04PrSMyVdBXSY" class="special-link">Curso de Iniciante <br />Para Forex</a>
+                  <a href="https://whop.com/emc/?pass=prod_04PrSMyVdBXSY" class="special-link">Curso de Forex <br />Para Iniciantes</a>
                   <p>
                     A small river named Duden flows by their place and supplies
                     it with the necessary regelialia.
