--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                   <li>
                     <a href="#portfolio-section" class="nav-link">Portfolio</a>
                   </li>
-                  <li><a href="#about-section" class="nav-link">About</a></li>
+                  <li><a href="#about-section" class="nav-link">Sobre</a></li>
                   <li>
-                    <a href="#services-section" class="nav-link">Services</a>
+                    <a href="#services-section" class="nav-link">Serviços</a>
                   </li>
                 </ul>
               </div>
@@ -95,13 +95,13 @@
                 <ul
                   class="site-nav-ul js-clone-nav text-left d-none d-lg-inline-block"
                 >
-                  <li><a href="#skills-section" class="nav-link">Skills</a></li>
+                  <li><a href="#skills-section" class="nav-link">Habilidades</a></li>
                  
                   <li>
-                    <a href="#journal-section" class="nav-link">Journal</a>
+                    <a href="#journal-section" class="nav-link">Galeria</a>
                   </li>
                   <li>
-                    <a href="#contact-section" class="nav-link">Contact</a>
+                    <a href="#contact-section" class="nav-link">Contacto</a>
                   </li>
                 </ul>
 
@@ -126,7 +126,7 @@
               <div class="col-md-7 mx-auto text-center">
                 <h1 class="heading gsap-reveal-hero text-white">E|M CAPITAL</h1>
                 <h2 class="subheading gsap-reveal-hero text-white">
-                  Investing in a better future
+                  Investindo em um Futuro melhor
                 </h2>
               </div>
             </div>
