updated em portugues

--- a/pt/index.html
+++ b/pt/index.html
@@ -289,125 +289,7 @@
                   </a>
                 </div>
 
-                <!-- <div
-                  class="item illustration packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2"
-                >
-                  <a
-                    href="images/work_5_md.jpg"
-                    class="portfolio-item isotope-item gsap-reveal-img"
-                    data-fancybox="gallery"
-                    data-caption="Shoe Rebranding"
-                  >
-                    <div class="overlay">
-                      <span class="wrap-icon icon-photo2"></span>
-                      <div class="portfolio-item-content">
-                        <h3>Shoe Rebranding</h3>
-                        <p>illustration, packaging</p>
-                      </div>
-                    </div>
-                    <img
-                      src="images/work_5_md.jpg"
-                      class="lazyload img-fluid"
-                      alt="Images"
-                    />
-                  </a>
-                </div>
-
-                <div
-                  class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2"
-                >
-                  <a
-                    href="portfolio-single-2.html"
-                    class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img"
-                    data-id="2"
-                  >
-                    <div class="overlay">
-                      <span class="wrap-icon icon-link2"></span>
-                      <div class="portfolio-item-content">
-                        <h3>Reshape</h3>
-                        <p>web, branding</p>
-                      </div>
-                    </div>
-                    <img
-                      src="images/work_6_md.jpg"
-                      class="lazyload img-fluid"
-                      alt="Images"
-                    />
-                  </a>
-                </div>
-
-                <div
-                  class="item branding packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2"
-                >
-                  <a
-                    href="images/work_7_a_md.jpg"
-                    class="portfolio-item item-portrait isotope-item gsap-reveal-img"
-                    data-fancybox="gallery"
-                    data-caption="Modern Building"
-                  >
-                    <div class="overlay">
-                      <span class="wrap-icon icon-photo2"></span>
-                      <div class="portfolio-item-content">
-                        <h3>Modern Building</h3>
-                        <p>branding, packaging</p>
-                      </div>
-                    </div>
-                    <img
-                      src="images/work_7_a_md.jpg"
-                      class="lazyload img-fluid"
-                      alt="Images"
-                    />
-                  </a>
-                </div>
-
-                <div
-                  class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2"
-                >
-                  <a
-                    href="https://www.youtube.com/watch?v=mwtbEGNABWU"
-                    class="portfolio-item isotope-item gsap-reveal-img"
-                    data-fancybox="gallery"
-                    data-caption="Showreel 2019"
-                  >
-                    <div class="overlay">
-                      <span class="wrap-icon icon-play_circle_filled"></span>
-                      <div class="portfolio-item-content">
-                        <h3>Showreel 2019</h3>
-                        <p>web, branding</p>
-                      </div>
-                    </div>
-                    <img
-                      src="images/work_8_md.jpg"
-                      class="lazyload img-fluid"
-                      alt="Images"
-                    />
-                  </a>
-                </div>
-
-                <div
-                  class="item web illustration col-sm-6 col-md-6 col-lg-4 isotope-mb-2"
-                >
-                  <a
-                    href="images/work_9_a_md.jpg"
-                    class="portfolio-item isotope-item gsap-reveal-img"
-                    data-fancybox="gallery"
-                    data-caption="Render Packaging"
-                  >
-                    <div class="overlay">
-                      <span class="wrap-icon icon-photo2"></span>
-                      <div class="portfolio-item-content">
-                        <h3>Render Packaging</h3>
-                        <p>web, illustration</p>
-                      </div>
-                    </div>
-                    <img
-                      src="images/work_9_a_md.jpg"
-                      class="lazyload img-fluid"
-                      alt="Images"
-                    />
-                  </a>
-                </div> -->
-
+              
               </div>
             </div>
           </div>
@@ -444,7 +326,7 @@
           <div class="container">
             <div class="section-heading-wrap text-center mb-5">
               <h2 class="heading-h2 text-center divider">
-                <span class="gsap-reveal">About E|M</span>
+                <span class="gsap-reveal">Sobre E|M</span>
               </h2>
               <span class="gsap-reveal"
                 ><img src="images/divider.png" alt="divider" width="76"
@@ -459,67 +341,67 @@
               </div>
               <div class="col-lg-4 pr-lg-5">
                 <h3 class="mb-4 heading-h3">
-                  <span class="gsap-reveal">Who We Are</span>
+                  <span class="gsap-reveal">Quem Somo Nos?</span>
                 </h3>
                 <p class="lead gsap-reveal">
-                  E|M Capital LLC, also known as EDILSON MOREIRA CAPITAL -
+                  E|M Capital LLC, também conhecido como EDILSON MOREIRA CAPITAL -
                   COMERCIO & SERVIÇOS LDA,
                 </p>
                 <p class="mb-4 gsap-reveal">
-                  is a premier financial services company based in Namibe,
-                  Angola. Founded by Edilson Moreira, our mission is to provide
-                  top-tier forex trading education and services to clients
-                  worldwide. <br />
-                  Since 2018, we have successfully taught over 8000+ students
-                  internationally, empowering them with the knowledge and skills
-                  needed to excel in the forex market.
+                  é uma empresa líder em serviços financeiros com sede no Namibe,
+                  Angola. Fundada por Edilson Moreira, nossa missão é proporcionar
+                  educação e serviços de negociação forex de alto nível para clientes
+                  mundialmente. <br />
+                  Desde 2018, ensinamos com sucesso mais de 8.000 alunos
+                  internacionalmente, capacitando-os com o conhecimento e as habilidades
+                  necessário para se destacar no mercado cambial.
                 </p>
               </div>
               <div class="col-lg-4 pr-lg-5">
                 <h3 class="mb-4 heading-h3">
-                  <span class="gsap-reveal">What We Do</span>
+                  <span class="gsap-reveal">O que nós Fazemos?</span>
                 </h3>
 
                 <ul style="padding: 0; padding-left: 15px">
-                  At E|M Capital, we specialize in:
-                  <li>Comprehensive forex trading education and mentorship</li>
-                  <li>Cutting-edge trading strategies and tools</li>
-                  <li>Market analysis and insights</li>
-                  <li>Hosting forex trading seminars and workshops</li>
+                 Na E|M Capital, somos especializados em:
+                  <li>Educação e orientação abrangentes sobre negociação forex</li>
+                  <li>Estratégias e ferramentas de negociação de última geração</li>
+                  <li>Análise e insights de mercado</li>
+                  <li>Organização de seminários e workshops de negociação forex</li>
                 </ul>
 
                 <p class="mb-4 gsap-reveal">
-                  Our trading strategies are based on D1 candle close and open,
-                  supply and demand zones (S&R), break and retest, and channels.
-                  We utilize advanced tools like Volume Profile and moving
-                  averages (50 SMA and 200 SMA), along with 15-5 minute charts
-                  for precise price action confirmations.
+                 Nossas estratégias de negociação são baseadas no fechamento e abertura da vela D1,
+                  zonas de oferta e demanda (S&R), interrupção e reteste e canais.
+                  Utilizamos ferramentas avançadas como Volume Profile e movimentação
+                  médias (50 SMA e 200 SMA), juntamente com gráficos de 15 a 5 minutos
+                  para confirmações precisas de ações de preços.
                 </p>
               </div>
 
               <div class="col-lg-4 pr-lg-5">
                 <h3 class="mb-4 heading-h3">
-                  <span class="gsap-reveal">Meet the Founder & Director</span>
+                  <span class="gsap-reveal">Conheça o Fundador e Diretor</span>
                 </h3>
                 <p class="lead gsap-reveal">
                   Edilson Moreira
                 </p>
                 <p class="mb-4 gsap-reveal">
-                  The visionary
-                  behind E|M Capital, leads our team with unparalleled expertise
-                  and dedication. Under his leadership, we have expanded our
-                  reach and impact, providing exceptional services to traders in
-                  Angola, Portugal, South Africa, Namibia, Dubai, and the United
-                  States. <br>
-                  <h3 class="mb-4 heading-h3">Our Vision </h3>
-                  Since our inception, we've been
-                  committed to sailing like a boat against the current, pushing
-                  boundaries and striving for excellence. Join our community and
-                  trade with the best, leveraging our expertise and resources to
-                  achieve your financial goals. <br />
-                  Since 2018, we have successfully taught over 8000+ students
-                  internationally, empowering them with the knowledge and skills
-                  needed to excel in the forex market.
+                 O visionário
+                  por trás da E|M Capital, lidera nossa equipe com experiência incomparável
+                  e dedicação. Sob sua liderança, expandimos nossa
+                  alcance e impacto, fornecendo serviços excepcionais aos comerciantes em
+                  Angola, Portugal, África do Sul, Namíbia, Dubai e Estados Unidos
+                  Estados. <br>
+                  <h3 class="mb-4 header-h3">Nossa Visão </h3>
+                  Desde a nossa criação, estivemos
+                  empenhado em navegar como um barco contra a corrente, empurrando
+                  limites e buscando a excelência. Junte-se à nossa comunidade e
+                  negocie com os melhores, aproveitando nossa experiência e recursos para
+                  alcançar seus objetivos financeiros. <br />
+                  Desde 2018, ensinamos com sucesso mais de 8.000 alunos
+                  internacionalmente, capacitando-os com o conhecimento e as habilidades
+                  necessário para se destacar no mercado cambial.
                 </p>
               </div>
             </div>
@@ -529,7 +411,7 @@
         <div class="unslate_co--section" id="services-section">
           <div class="container">
             <div class="section-heading-wrap text-center mb-5">
-              <h2 class="heading-h2 text-center divider">E|M Services</h2>
+              <h2 class="heading-h2 text-center divider">E|M Serviços</h2>
               <img src="images/divider.png" alt="divider" width="76" />
             </div>
 
@@ -545,11 +427,11 @@
                   </div>
                   <a href="https://whop.com/emc/" role="link" aria-label="link" class="special-link">
                     E|M CAPITAL Discord<br />
-                    Membership
+                    Associação
                   </a>
                   <p>
-                    A small river named Duden flows by their place and supplies
-                    it with the necessary regelialia.
+                    Um pequeno rio chamado Duden passa por seu lugar e abastece
+                    com a regelialia necessária.
                   </p>
                 </div>
               </div>
