--- a/pt/index.html
+++ b/pt/index.html
@@ -560,7 +560,7 @@
           <div class="container">
             <div class="section-heading-wrap text-center mb-5">
               <h2 class="heading-h2 text-center divider">
-                <span class="gsap-reveal">Why Should You Choose Us?</span>
+                <span class="gsap-reveal">Por que você deve nos escolher?</span>
               </h2>
               <span class="gsap-reveal"
                 ><img src="images/divider.png" alt="divider" width="76"
@@ -580,7 +580,7 @@
                     >
                     <span class="append-text">%</span>
                   </span>
-                  <span class="counter-label">Accuracy</span>
+                  <span class="counter-label">Precisão</span>
                 </div>
               </div>
               <div
@@ -595,7 +595,7 @@
                     >
                     <span class="append-text">%</span>
                   </span>
-                  <span class="counter-label">Efficiency</span>
+                  <span class="counter-label">Eficiência</span>
                 </div>
               </div>
               <div
@@ -610,7 +610,7 @@
                     >
                     <span class="append-text">%</span>
                   </span>
-                  <span class="counter-label">Reliability</span>
+                  <span class="counter-label">Confiabilidade</span>
                 </div>
               </div>
               <div
@@ -625,7 +625,7 @@
                     >
                     <span class="append-text">%</span>
                   </span>
-                  <span class="counter-label">Profitability</span>
+                  <span class="counter-label">Rentabilidade</span>
                 </div>
               </div>
             </div>
@@ -638,7 +638,7 @@
           <div class="container">
             <div class="section-heading-wrap text-center mb-5">
               <h2 class="heading-h2 text-center divider">
-                <span class="gsap-reveal">Gallery</span>
+                <span class="gsap-reveal">Galeria</span>
               </h2>
               <span class="gsap-reveal"
                 ><img src="images/divider.png" alt="divider" width="76"
