update index pt

--- a/pt/index.html
+++ b/pt/index.html
@@ -163,15 +163,6 @@
                   >Filter</a
                 >
 
-                <div class="filter-wrap">
-                  <div class="filter ml-auto" id="filters">
-                    <a href="#" class="active" data-filter="*">All</a>
-                    <a href="#" data-filter=".web">Web</a>
-                    <a href="#" data-filter=".branding">Branding</a>
-                    <a href="#" data-filter=".illustration">Illustration</a>
-                    <a href="#" data-filter=".packaging">Packaging</a>
-                  </div>
-                </div>
               </div>
 
               <div id="posts" class="row gutter-isotope-item">
@@ -341,7 +332,7 @@
               </div>
               <div class="col-lg-4 pr-lg-5">
                 <h3 class="mb-4 heading-h3">
-                  <span class="gsap-reveal">Quem Somo Nos?</span>
+                  <span class="gsap-reveal">Quem Somos Nos?</span>
                 </h3>
                 <p class="lead gsap-reveal">
                   E|M Capital LLC, também conhecido como EDILSON MOREIRA CAPITAL -
@@ -762,7 +753,7 @@
           <div class="container">
             <div class="section-heading-wrap text-center mb-5">
               <h2 class="heading-h2 text-center divider">
-                <span class="gsap-reveal">Get In Touch</span>
+                <span class="gsap-reveal">Entre em contato</span>
               </h2>
               <span class="gsap-reveal"
                 ><img src="images/divider.png" alt="divider" width="76"
@@ -778,7 +769,7 @@
                 >
                   <div class="form-group row mb-0">
                     <div class="col-lg-6 form-group gsap-reveal">
-                      <label for="name">Name</label>
+                      <label for="name">Nome</label>
                       <input
                         name="name"
                         type="text"
@@ -796,7 +787,7 @@
                       />
                     </div>
                     <div class="col-lg-12 form-group gsap-reveal">
-                      <label for="message">Write your message...</label>
+                      <label for="message">Escreva sua mensagem...</label>
                       <textarea
                         name="message"
                         id="message"
@@ -836,14 +827,14 @@
                     >
                   </div>
                   <div class="gsap-reveal d-block">
-                    <span class="d-block contact-info-label">Address</span>
+                    <span class="d-block contact-info-label">Endereço</span>
                     <address class="contact-info-val">
-                      273 South Riverview Rd. <br />
-                      New York, NY 10011
+                      Luanda,Mutamba <br />
+                      Angola
                     </address>
                   </div>
                   <div class="gsap-reveal d-block">
-                    <span class="d-block contact-info-label">Social media</span>
+                    <span class="d-block contact-info-label">Redes Sociais</span>
                     <a
                       class="contact-info-val"
                       href="https://www.instagram.com/emc.ao"
@@ -871,8 +862,6 @@
                 <li>
                   <a href="https://www.instagram.com/emc.ao?igsh=eW04MWh3M3ZxN2ts">Instagram</a>
                 </li>
-                <li><a href="#">Dribbble</a></li>
-                <li><a href="#">Behance</a></li>
               </ul>
 
               <p class="site-copyright">
