--- a/index.html
+++ b/index.html
@@ -163,15 +163,7 @@
                   >Filter</a
                 >
 
-                <div class="filter-wrap">
-                  <div class="filter ml-auto" id="filters">
-                    <a href="#" class="active" data-filter="*">All</a>
-                    <a href="#" data-filter=".web">Web</a>
-                    <a href="#" data-filter=".branding">Branding</a>
-                    <a href="#" data-filter=".illustration">Illustration</a>
-                    <a href="#" data-filter=".packaging">Packaging</a>
-                  </div>
-                </div>
+              
               </div>
 
               <div id="posts" class="row gutter-isotope-item">
@@ -956,8 +948,8 @@
                   <div class="gsap-reveal d-block">
                     <span class="d-block contact-info-label">Address</span>
                     <address class="contact-info-val">
-                      273 South Riverview Rd. <br />
-                      New York, NY 10011
+                      Luanda,Mutamba <br />
+                      Angola
                     </address>
                   </div>
                   <div class="gsap-reveal d-block">
@@ -989,8 +981,7 @@
                 <li>
                   <a href="https://www.instagram.com/emc.ao?igsh=eW04MWh3M3ZxN2ts">Instagram</a>
                 </li>
-                <li><a href="#">Dribbble</a></li>
-                <li><a href="#">Behance</a></li>
+               
               </ul>
 
               <p class="site-copyright">
