--- a/pt/index.html
+++ b/pt/index.html
@@ -137,7 +137,7 @@
             <span class="mouse">
               <span class="scroll"></span>
             </span>
-            <span class="mouse-label">Scroll</span>
+            <span class="mouse-label">rolar</span>
           </a>
         </div>
         <!-- END .cover-v1 -->
